# SO-Lab1-20201

./: CMakeLists.txt
ejemplos/ejemplos_argc_argv/: a.out  edad.c  presi
enunciado/wcat/: texto.txt  wcat.c  wcat20
enunciado/wget/: laura  laura.txt  texto.txt  texto2.txt  wgrep.c
enunciado/wunzip/: file1.txt  wunzip  wunzip.c
enunciado/wzip/: input.txt  meh.txt  wii  wzip  wzip.c
